opencloud/opencloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencloud
  namespace: documents
  labels:
    app.kubernetes.io/name: opencloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opencloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opencloud
    spec:
      containers:
        - args:
            - -c
            - opencloud init || true; opencloud server
          command:
            - /bin/sh
          image: opencloudeu/opencloud-rolling:4.1.0
          name: opencloud
          securityContext:
            runAsGroup: 0
            runAsUser: 0
          volumeMounts:
            - mountPath: /etc/opencloud
              name: opencloud-config
            - mountPath: /var/lib/opencloud
              name: opencloud-data
      restartPolicy: Always
      volumes:
        - name: opencloud-config
          persistentVolumeClaim:
            claimName: opencloud-config-pvc
        - name: opencloud-data
          persistentVolumeClaim:
            claimName: opencloud-data-pvc
