opencloud/opencloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencloud
  namespace: documents
  labels:
    app.kubernetes.io/name: opencloud
spec:
  type: ClusterIP
  ports:
    - name: "9250"
      port: 9250
      targetPort: 9250
  selector:
    app.kubernetes.io/name: opencloud
