opencloud/opencloud-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opencloud-router
  namespace: documents
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.attias.io`)
      kind: Rule
      services:
        - name: opencloud-opencloud
          port: 9200
  tls:
    certResolver: le
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: onlyoffice-router
#   namespace: documents
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`onlyoffice.attias.io`)
#       kind: Rule
#       services:
#         - name: opencloud-onlyoffice
#           port: 80
#   tls:
#     certResolver: le
